# rpi-eol-tester

./: .gitignore  ASSEMBLY_TEST.md  README.md  TEST_SEQUENCE.md  Teststand Launcher.desktop  assembly_config.yaml  config.yaml  hardware_config.yaml  pyproject.toml
firmware-artifacts/: bootloader.s37  firmware.s37  sensor.s37
teststand/: __init__.py  assembly.py  cli.py  dut_mode_control.py  flash.jlink  flash_firmware.py  joulescope_mux.py  main.py  power_path.py
